# learn-opengl

./: CMakeLists.txt  README.md
include/glad/: glad.h
include/loader/: camera.h  filesystem.h  mesh.hpp  model.hpp  resourcesLoader.hpp  shader.h  texture.h  video_frame.hpp
include/utils/: callback_manager.hpp  display.hpp  screen_capture.hpp
src/: glad.c
src/advancedFeatures/antiAliasing/: main.cpp
src/advancedFeatures/antiAliasing/shaders/: fragment1.glsl
src/advancedFeatures/blending/: main.cpp
src/advancedFeatures/blending/shaders/: fragment1.glsl
src/advancedFeatures/cubemaps/: main.cpp
src/advancedFeatures/depthTest/: main.cpp
src/advancedFeatures/depthTest/shaders/: fragment2.glsl
src/advancedFeatures/faceCulling/: main.cpp
src/advancedFeatures/frameBuffers/: main.cpp
src/advancedFeatures/frameBuffers/shaders/: fragment2.glsl
src/advancedFeatures/geometryShader/: main.cpp  normalVislization.cpp
src/advancedFeatures/instancing/: main.cpp  planet.cpp
src/advancedFeatures/stencilTest/: main.cpp
src/advancedLighting/Blinn-Phong/: main.cpp
src/getStarted/: camera.cpp  coordinate.cpp  rect.cpp  shader.cpp  texture.cpp  transform.cpp  triangle.cpp  window.cpp
src/getStarted/shaders/: fragment.fs
src/lighting/basicLighting/: main.cpp
src/lighting/colors/: main.cpp
src/lighting/lightingCasters/: main.cpp
src/lighting/lightingMaps/: main.cpp
src/lighting/material/: main.cpp
src/lighting/multipleLights/: main.cpp
src/modelLoading/: main.cpp
src/test/displayTest/: main.cpp
src/test/videoBlendMode/: main.cpp
(+17 files in other folders)
